<resources>
    <string name="app_name">Infracciones</string>
    <string name="sp_has_config_prefix">has_config_prefix</string>
    <string name="sp_session_token">session_token</string>
    <string name="sp_user">sp_user</string>
    <string name="sp_id_officer">id_officer</string>
    <string name="sp_person_name">person_name</string>
    <string name="sp_person_paternal">person_paternal</string>
    <string name="sp_person_maternal">person_maternal</string>
    <string name="sp_person_photo_url">person_photo_url</string>
    <string name="sp_has_session">has_session</string>
    <string name="sp_firebase_token_push">firebase_token_push</string>
    <string name="sp_id_state">id_state</string>
    <string name="sp_id_township">id_township</string>
    <string name="sp_township_name">township_name</string>
    <string name="sp_prefix">prefix</string>
    <string name="sp_last_synch">last_synch</string>
    <string name="sp_no_employee">no_employee</string>
    <string name="sp_default_zip_code">default_zip_code</string>
    <string name="sp_default_colony">default_colony</string>
    <string name="sp_default_street">default_street</string>
    <string name="sp_default_street1">default_street1</string>
    <string name="sp_default_street2">default_street2</string>
    <string name="sp_default_article">default_article</string>
    <string name="sp_default_fraction">default_fraction</string>
    <string name="sp_default_motivation">default_motivation</string>
    <string name="sp_uses_codi">uses_codi</string>
    <string name="sp_has_config_codi">has_config_codi</string>
    <string name="sp_has_bank_account_codi">has_bank_account_codi</string>
    <string name="sp_codi_version">codi_version</string>
    <string name="sp_codi_phone_number">codi_phone_number</string>
    <string name="sp_codi_andId">codi_andId</string>
    <string name="sp_codi_idH">codi_idH</string>
    <string name="sp_codi_dv">codi_dv</string>
    <string name="sp_codi_gId">codi_gId</string>
    <string name="sp_codi_phone_alias">codi_phone_alias</string>
    <string name="sp_codi_verification_code">codi_verification_code</string>
    <string name="sp_codi_keysource">codi_keysource</string>
    <string name="sp_codi_fcm_token">codi_fcm_token</string>
    <string name="sp_codi_account_waybill">codi_account_waybill</string>
    <string name="sp_codi_name_beneficiary">codi_name_beneficiary</string>
    <string name="sp_codi_serial">codi_serial</string>
    <string name="sp_codi_serial_update">codi_serial_update</string>
    <string name="rc_version">desarrollo_version</string>
    <string name="channel_name">QUETZ_SISTEMAS_INFRACCIONES</string>
    <string name="channel_description">Canal de notificationes de Quetzalcoatl Sistemas para la terminal de infracciones</string>
    <string name="h_user">Usuario</string>
    <string name="h_password">Contraseña</string>
    <string name="h_no_document"># Documento</string>
    <string name="h_sub_brand">Submarca</string>
    <string name="h_new_sub_brand">Nueva submarca</string>
    <string name="h_color">Color</string>
    <string name="h_new_color">Nuevo color</string>
    <string name="h_circulation_card"># Tarjeta</string>
    <string name="h_sub_brand_edt">Ingresa la Submarca</string>
    <string name="h_year"># Año</string>
    <string name="h_zip_code">Código postal</string>
    <string name="h_colony">Nombre colonia</string>
    <string name="h_street">Nombre calle</string>
    <string name="h_street1">Calle 1</string>
    <string name="h_street2">Calle 2</string>
    <string name="h_name">Nombre</string>
    <string name="h_f_lastname">A. Paterno</string>
    <string name="h_m_lastname">A. Materno</string>
    <string name="h_rfc">R.F.C.</string>
    <string name="h_no_ext">No. Ext.</string>
    <string name="h_no_int">No. Int.</string>
    <string name="h_no_license">No. Licencia</string>
    <string name="h_license_exp">Año Exp.</string>
    <string name="h_motivation">Ingresa la motivación</string>
    <string name="h_tax_denomination">Nombre / Razón social</string>
    <string name="h_email">Correo electrónico</string>
    <string name="t_company_log_in">Sistema de\ninfracciones</string>
    <string name="t_title_log_in">Login</string>
    <string name="t_btn_log_in">Entrar</string>
    <string name="t_btn_forgot_psw">
        <u>Olvidé mi contraseña</u>
    </string>
    <string name="t_close_sesion">Cerrar Sesion</string>
    <string name="t_initial_configuration">Configuración Inicial</string>
    <string name="t_select_state">Seleccione un estado:</string>
    <string name="t_select_township">Seleccione un municipio:</string>
    <string name="t_input_password">Ingrese la contraseña para confirmar</string>
    <string name="t_reconfiguration">Reestablecimiento</string>
    <string name="t_confirm_password">Ingrese su contraseña para comenzar el reestablecimiento de la configuración:</string>
    <string name="t_name_offender">Nombre del Infractor:</string>
    <string name="t_name_payer">Nombre del Pagador:</string>
    <string name="t_total_umas">Total de UMAs:</string>
    <string name="t_subtotal_price">Subtotal:</string>
    <string name="t_total_discount">Descuento:</string>
    <string name="t_total_surcharges">Sobrecargos:</string>
    <string name="t_total_price">Total a pagar:</string>
    <string name="t_name_buyer">Nombre del pagador:</string>
    <string name="t_amount_payed">Monto pagado:</string>
    <string name="t_folio_payment">Folio de pago:</string>
    <string name="t_tracking_key">Clave de rastreo:</string>
    <string name="t_date_transaction">Fecha y hora de la transacción:</string>
    <string name="t_input_phone_title">Registro CoDi</string>
    <string name="t_input_phone_number">Ingresa el número telefónico de este dispositivo:</string>
    <string name="t_input_phone_payment_title">Enviar Cobro CoDi</string>
    <string name="t_input_phone_payment">Ingresa el número telefónico del infractor para solicitar el cobro:</string>
    <string name="t_input_verification_code">Ingresa el código de verificación mandado a tu número telefónico:</string>
    <string name="t_resend_verification_code">El tiempo de espera se ha agotado, de click en Aceptar para enviar nuevamente un código de verificación al número telefónico</string>
    <string name="t_toolbar_title_infraction">Infracciones</string>
    <string name="t_toolbar_subtitle_infraction">Control y registro de infracciones</string>
    <string name="t_toolbar_hello">¡Hola! Bienvenid@</string>
    <string name="t_last_infractions">Últimas infracciones</string>
    <string name="t_toolbar_title_new_infraction">Nueva</string>
    <string name="t_toolbar_subtitle_new_infraction">Alta de infracción</string>
    <string name="t_toolbar_title_edit_infraction">Editar</string>
    <string name="t_toolbar_subtitle_edit_infraction">Edición de infracción</string>
    <string name="t_vehicle">Vehículo</string>
    <string name="t_brand">Marca*</string>
    <string name="t_sub_brand">Submarca*</string>
    <string name="t_year">Año*</string>
    <string name="t_type">Tipo*</string>
    <string name="t_color">Color*</string>
    <string name="t_identifier_doc">Doc. Indentificador*</string>
    <string name="t_no_document">No. del documento*</string>
    <string name="t_evidence_1">Evidencia 1</string>
    <string name="t_evidence_2">Evidencia 2</string>
    <string name="t_issued_in">Expedido en*</string>
    <string name="t_doc_type">Tipo de documento*</string>
    <string name="t_circulation_card">Tarjeta de circulación</string>
    <string name="t_type_service">Tipo de servicio*</string>
    <string name="t_infraction">Infracción</string>
    <string name="t_location_infraction">Lugar de la infracción</string>
    <string name="t_location">Ubicación</string>
    <string name="t_zip_code">Código Postal</string>
    <string name="t_colony">Colonia</string>
    <string name="t_street">Calle</string>
    <string name="t_between_street1">Entre calle...</string>
    <string name="t_between_street2">y calle...</string>
    <string name="t_committed_offense">Infracción cometida</string>
    <string name="t_article">Artículo</string>
    <string name="t_fraction">Fracción</string>
    <string name="t_description">Descripción</string>
    <string name="t_motivation">Motivación</string>
    <string name="t_uma">U.M.A.</string>
    <string name="t_retained_doc">Documento retenido</string>
    <string name="t_referral_deposit">Remisión a depósito</string>
    <string name="t_referral_disposition">Disposición</string>
    <string name="t_offender">Infractor</string>
    <string name="t_absent_offender">Infractor ausente</string>
    <string name="t_offender_info">Datos del infractor</string>
    <string name="t_offender_name">Nombre(s)*</string>
    <string name="t_offender_lf_name">Apellido Paterno*</string>
    <string name="t_offender_lm_name">Apellido Materno*</string>
    <string name="t_offender_rfc">R.F.C.</string>
    <string name="t_offender_direction">Dirección del infractor</string>
    <string name="t_offender_state">Estado</string>
    <string name="t_offender_zip_code">Código Postal</string>
    <string name="t_offender_township">Municipio</string>
    <string name="t_offender_colony">Colonia</string>
    <string name="t_offender_street">Calle</string>
    <string name="t_offender_no_ext">No. exterior</string>
    <string name="t_offender_no_int">No. interior</string>
    <string name="t_offender_license">Licencia del infractor</string>
    <string name="t_offender_license_no">Número</string>
    <string name="t_offender_license_type">Tipo</string>
    <string name="t_offender_license_issued_in">Expedida en</string>
    <string name="t_my_preferences">Preferencias</string>
    <string name="t_my_preferences_subtitle">Editar mis preferencias</string>
    <string name="t_my_direction">Dirección predeterminada</string>
    <string name="t_my_motivation">Motivación predeterminada</string>
    <string name="t_payer_title">¿Quién paga?</string>
    <string name="t_payer_subtitle">Datos de quien paga</string>
    <string name="t_delete_payer_data">Borrar datos</string>
    <string name="t_payer_name">Nombre(s)*</string>
    <string name="t_payer_last_name">Apellido Paterno*</string>
    <string name="t_payer_s_last_name">Apellido Materno*</string>
    <string name="t_payer_bill">Factura</string>
    <string name="t_payer_generate_bill">Emitir factura</string>
    <string name="t_payer_tax_denomination">Nombre o Razón Social </string>
    <string name="t_payer_rfc">RFC*</string>
    <string name="t_payer_email">Correo electrónico</string>
    <string name="t_paid">Pagado</string>
    <string name="t_status_pending_local">Envio pendiente</string>
    <string name="t_search_folio_title">Folio:</string>
    <string name="t_status_send">Enviado</string>
    <string name="t_status_pending">Pendiente</string>
    <string name="t_account_validation_title">Cuenta CoDi</string>
    <string name="t_account_validation_subtitle">Estatus de la validación de cuenta CoDi</string>
    <string name="t_account_validation_status">Estatus de la validación:</string>
    <string name="t_account_validation_beneficiary">Nombre del beneficiario:</string>
    <string name="t_account_validation_type">Tipo de cuenta validada:</string>
    <string name="t_account_validation_no">Número de cuenta:</string>
    <string name="t_account_validation_waybill">Clave de rastreo:</string>
    <string name="t_payment_codi_title">Cobro CoDi</string>
    <string name="t_payment_codi_subtitle">Generar mensaje de cobro CoDi</string>
    <string name="t_payment_beneficiary">Nombre del beneficiario:</string>
    <string name="t_payment_amount">Monto a cobrar:</string>
    <string name="t_payment_concept">Concepto:</string>
    <string name="t_accept">Aceptar</string>
    <string name="t_add">Agregar</string>
    <string name="t_cancel">Cancelar</string>
    <string name="t_continue">Continuar</string>
</resources>