<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            style="@style/TextView_TitleItem_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/t_offender_info"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextView_TitleItem2_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/t_offender_name"
            android:textAlignment="textStart"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/edt_offender_name"
            style="@style/EditText_InputItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/h_name"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions|textPersonName|textCapWords"
            android:lines="1"
            android:maxLength="36"
            android:textColor="@color/colorLightBlack"
            android:textSize="@dimen/font_size_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            style="@style/TextView_TitleItem2_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/t_offender_lf_name"
            android:textAlignment="textStart"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_offender_name" />

        <EditText
            android:id="@+id/edt_offender_fln"
            style="@style/EditText_InputItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/h_f_lastname"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions|textPersonName|textCapWords"
            android:lines="1"
            android:maxLength="36"
            android:textColor="@color/colorLightBlack"
            android:textSize="@dimen/font_size_small"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            style="@style/TextView_TitleItem2_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/t_offender_lm_name"
            android:textAlignment="textStart"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/edt_offender_name" />

        <EditText
            android:id="@+id/edt_offender_mln"
            style="@style/EditText_InputItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/h_m_lastname"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions|textPersonName|textCapWords"
            android:lines="1"
            android:maxLength="36"
            android:textColor="@color/colorLightBlack"
            android:textSize="@dimen/font_size_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView7"
            style="@style/TextView_TitleItem2_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:text="@string/t_offender_rfc"
            android:textAlignment="textStart"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_offender_fln" />

        <EditText
            android:id="@+id/edt_offender_rfc"
            style="@style/EditText_InputItem"
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:digits="ABCDEFGHIJKLMNÑOPQRSTUVWXYZ0123456789"
            android:ems="10"
            android:hint="@string/h_rfc"
            android:imeOptions="actionDone"
            android:inputType="textNoSuggestions|textCapCharacters"
            android:lines="1"
            android:maxLength="20"
            android:textColor="@color/colorLightBlack"
            android:textSize="@dimen/font_size_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView8"
            style="@style/TextView_TitleItem_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/t_offender_direction"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_offender_rfc" />

        <TextView
            android:id="@+id/textView19"
            style="@style/TextView_TitleItem2_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/t_offender_state"
            android:textAlignment="textStart"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Spinner
            android:id="@+id/spn_state"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <TextView
            android:id="@+id/textView20"
            style="@style/TextView_TitleItem2_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/t_offender_township"
            android:textAlignment="textStart"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />


        <Spinner
            android:id="@+id/spn_township"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <!--<TextView
            android:id="@+id/textView9"
            style="@style/TextView_TitleItem2_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/t_offender_zip_code"
            android:textAlignment="textStart"
            android:textSize="13sp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spn_state" />

        <Spinner
            android:id="@+id/spn_zip_code"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:spinnerMode="dialog"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />-->

        <TextView
            android:id="@+id/textView10"
            style="@style/TextView_TitleItem2_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/t_offender_colony"
            android:textAlignment="textStart"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spn_state" />

        <EditText
            android:id="@+id/edt_colony"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/h_colony"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:lines="1"
            android:maxLength="100"
            android:textColor="@color/colorLightBlack"
            android:textSize="@dimen/font_size_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView18"
            style="@style/TextView_TitleItem2_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/t_offender_street"
            android:textAlignment="textStart"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_colony" />

        <EditText
            android:id="@+id/edt_street"
            style="@style/EditText_InputItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/h_street"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:lines="1"
            android:maxLength="100"
            android:textColor="@color/colorLightBlack"
            android:textSize="@dimen/font_size_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <TextView
            android:id="@+id/textView12"
            style="@style/TextView_TitleItem2_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/t_offender_no_ext"
            android:textAlignment="textStart"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_street" />

        <EditText
            android:id="@+id/edt_offender_no_ext"
            style="@style/EditText_InputItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/h_no_ext"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:lines="1"
            android:maxLength="20"
            android:textColor="@color/colorLightBlack"
            android:textSize="@dimen/font_size_small"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView13"
            style="@style/TextView_TitleItem2_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/t_offender_no_int"
            android:textAlignment="textStart"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/edt_street" />

        <EditText
            android:id="@+id/edt_offender_no_int"
            style="@style/EditText_InputItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/h_no_int"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:lines="1"
            android:maxLength="20"
            android:textColor="@color/colorLightBlack"
            android:textSize="@dimen/font_size_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView14"
            style="@style/TextView_TitleItem_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/t_offender_license"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_offender_no_int" />

        <TextView
            android:id="@+id/textView15"
            style="@style/TextView_TitleItem2_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/t_offender_license_no"
            android:textAlignment="textStart"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <EditText
            android:id="@+id/edt_offender_license_no"
            style="@style/EditText_InputItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/h_no_license"
            android:imeOptions="actionDone"
            android:inputType="textNoSuggestions"
            android:lines="1"
            android:maxLength="15"
            android:textColor="@color/colorLightBlack"
            android:textSize="@dimen/font_size_small"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView16"
            style="@style/TextView_TitleItem2_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/t_offender_license_type"
            android:textAlignment="textStart"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <Spinner
            android:id="@+id/spn_license_type"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            app:layout_constraintBottom_toBottomOf="@+id/edt_offender_license_no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/edt_offender_license_no" />

        <TextView
            android:id="@+id/textView17"
            style="@style/TextView_TitleItem2_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/t_offender_license_issued_in"
            android:textAlignment="textStart"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_offender_license_no" />

        <Spinner
            android:id="@+id/spn_license_issued_in"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>